# Nao

./: README.md
laberinto_final/: CMakeLists.txt  CMakeLists.txt.user.18  main.cpp  qiproject.xml
laberinto_final/build-naoqi-sdk/: CMakeCache.txt  CTestTestfile.cmake  Laberinto_final.cbp  Makefile  cmake_install.cmake  dependencies.cmake  qitest.cmake
laberinto_final/build-naoqi-sdk/sdk/: qitest.json
laberinto_final/build-naoqi-sdk/sdk/share/qi/: path.conf
